fixed header and some spacing

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -21,48 +21,55 @@ header {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    background-color: var(--accent1-color);
-    max-width: 100%;
+    background-color: #023047;
+    width: 100%;
+    height: 10%;
+    margin-bottom: 9px;
 }
 
 header img {
-    max-width: 20%;
+    max-width: 10%;
     margin: 0;
 }
 
 nav {
-    background-color: var(--secondary-color);
-    padding: 0.5rem;
+    background-color: #FFB703;
     margin: 1rem;
     max-width: 100%;
+    padding-left: 50px;
+    padding-right: 50px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     font-size: large;
     font-weight: 600;
+    gap: 3rem;
+    justify-content: center;
+    border: 2px solid #8ECAE6;
 }
 
 nav a {
     display: flex;
-    padding: 30px;
+    padding: 20px;
+    transition: background-color 0.3s;
+    letter-spacing: 2px;
 }
 
 a:link {
     text-decoration: none;
     display: block;
-    color: var(--primary-color)
 }
   
 a:visited {
     text-decoration: none;
     display: block;
-    color: var(--accent1-color);
+    color: #023047;
 }
   
 a:hover {
     text-decoration: underline;
-    color: var(--nav-hover-link-color);
-    background-color: var(--nav-hover-background-color);
+    color: white;
+    letter-spacing: 2px;
 }
   
 a:active {
@@ -70,7 +77,7 @@ a:active {
     color: var(--primary-color);
 }
 
-/* HEADER */
+/* ENDING HEADER */
 
 h1,
 h2,
@@ -112,7 +119,7 @@ p {
 
 .top {
     position: absolute;
-    top: 53%;
+    top: 42%;
     left: 50%;
     bottom: 50%;
     transform: translate(-50%, -50%); /* Center .top within .hero */
